# lfgdev

./: .gitignore  Justfile  LICENSE.md  README.md  pyproject.toml
.zed/: tasks.json
src/lfgdev/: __init__.py  message.py  protocol.py  types.py
src/lfgdev/client/: __init__.py  cli.py  main.py  style.py
src/lfgdev/message/: __init__.py  body.py  decoder.py  error.py  header.py  hello.py  last_seen.py  main.py  register.py  structs.py
src/lfgdev/messages/: __init__.py  decoder.py  header.py  hello.py  kind.py  last_seen.py  message.py  protocol.py
src/lfgdev/server/: __init__.py  db.py  main.py  message_handler.py  middleware.py  request_handler.py  router.py  types.py
src/lfgpy/: __init__.py  _client.py  _db.py  _message.py  _router.py  _server.py  client.py  config.py  message.py  model.py  parser.py  router.py  server.py  types.py
src/lfgpy/client/: main.py  style.py
src/lfgpy/server/: db.py  main.py  router.py
test/: conftest.py  test__client.py  test__db.py  test__message.py  test_client.py  test_db.py  test_integration.py  test_message.py  test_profiling.py  test_request_handler.py  test_server.py  test_types.py
