[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "lfgpy"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
lfg-server = "lfgpy._server:main"
lfg-client = "lfgpy._client:main"

[dependency-groups]
dev = [
    "ipython>=9.3.0",
    "mypy>=1.16.1",
    "mypyc>=0.0.1",
    "pytest>=8.4.1",
    "ruff>=0.12.0",
    "setuptools>=80.9.0",
    "types-setuptools>=80.9.0.20250529",
]

[tool.pytest.ini_options]
addopts = "-v -m 'not integration' -m 'not profiling'"
markers = ["integration", "profiling"]
